# rtic-pico-led-blink

./: Cargo.toml
.cargo/: config.toml
src/: debug.rs  main.rs
