[package]
authors = ["Niklas Wimmer <mail@nwimmer.me>"]
name = "ampel"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"

rtic = { git = "https://github.com/rtic-rs/rtic", features = ["thumbv6-backend"] }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", features = ["rp2040", "embedded-hal-async"] }

rp-pico = "0.7"

embedded-hal-async = "0.2.0-alpha.0"

defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "0.2.7"
fugit = "0.3.6"

[profile.dev]
opt-level = 'z'
# enable this for smaller binaries
# lto = 'thin'
incremental = false

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = "fat"
debug = true

